my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20070623-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20070623-1.c:17:36: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   17 |   if (nge(INT_MIN, INT_MAX) !=  0) abort();
      |                                    ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20070623-1.c:17:36: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20070623-1.c:40:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   40 |   exit(0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20070623-1.c:40:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
2 errors generated.
